updating privacy policy

--- a/US270_Free/privacy_policy.html
+++ b/US270_Free/privacy_policy.html
@@ -34,6 +34,9 @@
         <!---->
     </ul>
 </div>
+
+<p><strong>Permissions Requested</strong></p>
+<p>If you choose to share a map through the app, the app will request permission to write to external storage.  This permission is only used for sharing images at the user's request.</p>
 <p><strong>Security</strong></p>
 <p> I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.
 </p>
